--- a/react-basic/05_react中定义组件/1_函数式组件.html
+++ b/react-basic/05_react中定义组件/1_函数式组件.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>1_函数式组件</title>
 </head>
 <body>
     <div id="test"></div>
@@ -13,8 +13,11 @@
     <script src="../js/babel.min.js"></script>
 
     <script type="text/babel">
-        const VDOM = <h1>Hello React</h1>;
-        ReactDOM.render(VDOM, document.getElementById('test'))
+       function MyComponent(){
+        console.log(this)
+        return <h2>我是用函数定义的组件</h2>
+       }
+       ReactDOM.render(<MyComponent/>,document.getElementById('test'));
     </script>
 </body>
 </html>
