--- a/react-basic/05_react中定义组件/2_类式组件.html
+++ b/react-basic/05_react中定义组件/2_类式组件.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>2_类式组件</title>
 </head>
+
 <body>
     <div id="test"></div>
     <script src="../js/react.development.js"></script>
@@ -13,8 +15,15 @@
     <script src="../js/babel.min.js"></script>
 
     <script type="text/babel">
-        const VDOM = <h1>Hello React</h1>;
-        ReactDOM.render(VDOM, document.getElementById('test'))
+        class MyComponent extends React.Component {
+            render() {
+                console.log(this)
+                return <h2>我是用类定义的组件</h2>
+            }
+
+        }
+        ReactDOM.render(<MyComponent />, document.getElementById('test'));
     </script>
 </body>
+
 </html>
