--- a/react-basic/10_收集表单数据/2_受控组件.html
+++ b/react-basic/10_收集表单数据/2_受控组件.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>非受控组件</title>
+    <title>受控组件</title>
 </head>
 <body>
     <div id="root"></div>
@@ -13,16 +13,26 @@
     <script type="text/babel">
         // 非受控组件示例
         class Login extends React.Component {
+            state = {
+                username: '',
+                password: ''
+            }
             handleSubmit = (event)=>{
                 event.preventDefault();
-                const {username, password} = this
-                alert(`用户名: ${this.username.value}, 密码: ${this.password.value}`);
+                const {username, password} = this.state
+                alert(`用户名: ${username}, 密码: ${password}`);
+            }
+            saveUserName = (event) => {
+                this.setState({username:  event.target.value});
+            }
+            savePassword = (event) => {
+                this.setState({password: event.target.value});
             }
             render(){
                 return (
                     <form onSubmit = {this.handleSubmit}>
-                        <input ref={(c) => this.username = c} type="text" placeholder="用户名" name="username" />
-                        <input ref={(c) => this.password = c} type="password" placeholder="密码" name="password" />
+                        <input onChange={this.saveUserName} type="text" placeholder="用户名" name="username" />
+                        <input onChange={this.savePassword} type="password" placeholder="密码" name="password" />
                         <button type="submit">登录</button>
                     </form>
                 )
